articlelistings/style/article.css
p {
	margin: 0px 0px 0px 0px;
}
.header {
	position: fixed;
	padding: 15px 30% 15px 30%;
	width: 100vw;
	background-color: rgb(29, 31, 33);
	font-size: 1.5em;
	color: rgb(0, 195, 137);
	margin: 0px 15px 1em 15px;
	top: 0;
}
.header .author {
	color: #ccc;
	font-size: 0.85rem;
	margin: 2px 0px 0px 5px;
}
.content {
	font-size: 0.9em;
	text-align: justify;
	margin: 0px 0px 0px 0px;
}
.content p {
	margin: 20px 30px 20px 30px
}
.content .heading {
	font-size: 1.1em;
	color: rgb(0, 195, 137);
	margin: 0px 0px 0px 5px;
}
.contentheadingtxt {
	color: #ccc;
}
.content .main {
	margin: 15px;
	display: block;
	margin-left: auto;
  	margin-right: auto;
  	width: 30%;
}
.content .backarrow {
	margin: 0px 0px 0px 30px;
}
.footer {
	margin: 1em 5% 50px 5%;
	color: rgb(94, 94, 94);
	font-size: 11px;
}
.right {
	float: right;
}
.left {
	float: left;
}
a {
	color: rgb(0, 195, 137);
}
a:hover {
	text-decoration-color: red;
}
.page {
	margin: 5px 25% 5px 25%;
}
body {
	margin: 0px 0px 0px 0px;
}

